# c-98

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml
include/: figures.h  four.h  lib.h  lists.h  medieval.h  meta.h  vowels.h
src/Figures/: lib.cpp
src/Four/: lib.cpp
src/Lists/: lib.cpp
src/Medieval/: lib.cpp  main.cpp  myprogram
src/Meta/: lib.cpp
src/lab0/: lib.cpp
src/vowels_counter/: lib.cpp
test/: figures_test.cpp  four_test.cpp  hello_test.cpp  lists_test.cpp  medieval_test.cpp  meta_test.cpp  vowels_test.cpp
